@@ -1,3 +1,6 @@
+Drupal 7.60, 2018-10-18
+------------------------
+- Fixed security issues. See SA-CORE-2018-006.
 
 Drupal 7.59, 2018-04-25
 -----------------------
